--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "node": ">=8.3.0"
   },
   "scripts": {
-    "test": "nyc mocha test/**/*-test.js",
-    "test-report": "nyc --reporter=html --reporter=text mocha test/**/*-test.js",
+    "test": "nyc mocha test/**/*.test.js",
+    "test-report": "nyc --reporter=html --reporter=text mocha test/**/*.test.js",
     "coverage": "nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls"
   },
   "devDependencies": {
