Update version to 0.5.3
+ Optimize the encoding obj

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "msgpuck",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "A fast and memory-efficient MessagePack serialization library",
   "keywords": [
     "msgpack",
     "messagepack",
-    "serialization"
+    "serialization",
+    "binary"
   ],
   "license": "MIT",
   "author": {
