--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,28 @@
+sudo: false
+
 language: node_js
 
 node_js:
-  - 8
+  - 8.3
   - 9
-  - 10
 
-sudo: false
-
-git:
-  depth: 1
+matrix:
+  include:
+    - node_js: 10
+      env: COVERAGE_TESTS=true
+  allow_failures:
+    - node_js: 8.3
 
 cache:
   directories:
     - node_modules
     - ~/.npm
 
-matrix:
-  allow_failures:
-    - node_js: 8
+git:
+  depth: 3
 
 script:
   - npm run test
 
 after_success:
-  - npm run coverage
+  - env $COVERAGE_TESTS npm run coverage
