--- a/package.json
+++ b/package.json
@@ -26,23 +26,16 @@
     "node": ">=8.3.0"
   },
   "scripts": {
-    "test": "nyc mocha test/**/*.test.js",
-    "test-report": "nyc --reporter=html --reporter=text mocha test/**/*.test.js",
-    "coverage": "nyc report --reporter=text-lcov | ./node_modules/.bin/coveralls"
+    "test": "c8 mocha test/**/*.test.js",
+    "test-report": "c8 --reporter=html --reporter=text mocha test/**/*.test.js",
+    "coverage": "c8 report --reporter=text-lcov | ./node_modules/.bin/coveralls"
   },
   "devDependencies": {
+    "c8": "3.2.0",
     "coveralls": "3.0.2",
-    "mocha": "5.2.0",
-    "nyc": "12.0.2"
+    "mocha": "5.2.0"
   },
   "directories": {
     "test": "test/"
-  },
-  "nyc": {
-    "cache": false,
-    "reporter": [],
-    "include": [
-      "src/**/*.js"
-    ]
   }
 }
