--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,18 @@ matrix:
   include:
     - node_js: 10
       env: COVERAGE_TESTS=true
-  allow_failures:
-    - node_js: 8.3
+
+branches:
+  only:
+    - master
+
+git:
+  depth: 3
 
 cache:
   directories:
     - node_modules
     - ~/.npm
-
-git:
-  depth: 3
 
 script:
   - npm run test
