--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,33 @@ sudo: false
 language: node_js
 
 node_js:
-  - '8.3'
-  - '9'
+  - "8.3"
+  - "9"
 
 matrix:
   include:
-    - node_js: '10'
+    - node_js: "10"
       env: COVERAGE_TESTS=true
+    - name: "Node.js: nightly"
+      node_js: "node"
+      env:
+        - NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly
+        - NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly
+    - name: "Node.js: canary"
+      node_js: "node"
+      env:
+        - NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
+        - NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
+
+  allow_failures:
+    - node_js: "node"
+      env:
+        - NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly
+        - NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly
+    - node_js: "node"
+      env:
+        - NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
+        - NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
 
 branches:
   only:
