Add utf8-binary module
DRY.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "msgpuck",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "description": "A fast and memory-efficient MessagePack serialization library",
   "keywords": [
     "messagepack",
@@ -36,7 +36,8 @@
     "test": "test/"
   },
   "dependencies": {
-    "ascii-chr": "0.2.1"
+    "ascii-chr": "0.2.1",
+    "utf8-binary": "0.2.0"
   },
   "devDependencies": {
     "nyc": "13.1.0",
