--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "msgpuck",
-  "version": "0.6.3",
+  "version": "0.7.0",
   "description": "A fast and memory-efficient MessagePack serialization library",
   "keywords": [
     "messagepack",
@@ -40,8 +40,9 @@
     "utf8-binary": "0.2.0"
   },
   "devDependencies": {
-    "nyc": "13.1.0",
-    "mocha": "5.2.0"
+    "coveralls": "3.0.2",
+    "mocha": "5.2.0",
+    "nyc": "13.1.0"
   },
   "nyc": {
     "cache": false,
