--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: false
-
 language: node_js
 
 node_js:
@@ -10,22 +8,22 @@ node_js:
 
 matrix:
   include:
-    - name: "Node.js: nightly"
-      node_js: "node"
+    - node_js: 'node'
+      name: 'Node.js: nightly'
       env:
         - NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly
-    - name: "Node.js: canary"
-      node_js: "node"
+        - NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly
+    - node_js: 'node'
+      name: 'Node.js: canary'
       env:
         - NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
+        - NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
 
   allow_failures:
-    - node_js: "node"
-      env:
-        - NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly
-    - node_js: "node"
-      env:
-        - NODEJS_ORG_MIRROR=https://nodejs.org/download/v8-canary
+    - name: 'Node.js: nightly'
+    - name: 'Node.js: canary'
+
+sudo: false
 
 cache:
   directories:
@@ -33,7 +31,10 @@ cache:
     - ~/.npm
 
 git:
-  depth: 5
+  depth: 3
+
+install:
+  - npm install --ignore-scripts
 
 script:
   - npm run test
