--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "url": "https://github.com/AlexMasterov/msgpuck.js/issues"
   },
   "main": "./index.js",
-  "module": "./dist/index.esm.js",
-  "browser": "./dist/index.umd.min.js",
-  "unpkg": "./dist/index.esm.min.js",
-  "types": "./dist/index.d.ts",
+  "module": "./dist/latest/index.browser.js",
+  "browser": {
+    "./index.js": "./dist/latest/index.browser.js"
+  },
+  "unpkg": "./dist/latest/index.browser.min.js",
+  "types": "./index.d.ts",
   "files": [
-    "src/",
     "dist/",
-    "./index.js"
+    "./index.js",
+    "./index.d.ts",
+    "LICENSE",
+    "README.md"
   ],
   "engines": {
     "node": ">=7.0.0"
@@ -33,8 +37,10 @@
   "scripts": {
     "test": "nyc mocha --timeout 0 test/*.test.js",
     "test:report": "nyc --reporter=html --reporter=text mocha test/*.test.js",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "build": "node rollup/build"
   },
+  "sideEffects": false,
   "dependencies": {
     "ascii-chr": "0.3.0",
     "utf8-bin": "0.3.1"
@@ -42,7 +48,7 @@
   "devDependencies": {
     "coveralls": "3.0.3",
     "fs-extra": "7.0.1",
-    "mocha": "6.0.1",
+    "mocha": "6.0.2",
     "nyc": "13.3.0",
     "rollup": "1.2.3",
     "rollup-plugin-cjs-es": "0.7.0",
